--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "[my-framework] build --output public",
+    "build": "babel server.js -d dist",
     "start": "node dist/server.js",
     "dev": "nodemon server.js --exec babel-node"
   },
